chore(*): fix alignment of financial chart zoom handler (bug)

--- a/templates/react/igr-es6/financial-chart/default/files/src/views/__path__/style.css
+++ b/templates/react/igr-es6/financial-chart/default/files/src/views/__path__/style.css
@@ -2,7 +2,8 @@
     padding-top: 24px;
     display: flex;
     flex-flow: row;
-    justify-content: center;
+	justify-content: center;
+	text-align: left;
 }
 :local(.title) {
     color: rgb(0, 153, 255);
